# behavysis_classifier

./: README.md  conda_env.yaml  pyproject.toml
behavysis_classifier/: __init__.py  behav_classifier.py
behavysis_classifier/clf_models/: base_torch_model.py  clf_templates.py
behavysis_classifier/data_models/: behav_classifier_configs.py  model.py
behavysis_classifier/scripts/: classifier_gui.py  make_classifier.py
behavysis_classifier/templates/: train_behav_classifier.py
